[gd_scene load_steps=3 format=2]

[ext_resource path="res://src/UI/UIInventory.gd" type="Script" id=1]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.164706, 0.164706, 0.164706, 0.509804 )
border_width_left = 8
border_width_top = 8
border_width_right = 8
border_width_bottom = 8
border_color = Color( 0.14902, 0.14902, 0.14902, 1 )
border_blend = true
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2

[node name="ItemList" type="ItemList"]
margin_right = 200.0
margin_bottom = 800.0
rect_min_size = Vector2( 460, 745 )
size_flags_horizontal = 0
size_flags_vertical = 0
custom_constants/icon_margin = -50
custom_styles/bg = SubResource( 1 )
allow_rmb_select = true
max_columns = 4
icon_mode = 0
fixed_icon_size = Vector2( 100, 100 )
script = ExtResource( 1 )

[connection signal="gui_input" from="." to="." method="_on_ItemList_gui_input"]
[connection signal="item_rmb_selected" from="." to="." method="_on_ItemList_item_rmb_selected"]
[connection signal="item_selected" from="." to="." method="_on_ItemList_item_selected"]
